.provarCaches/00D5f000005vwGkEAI/objects/rstk__supdmdmatchlog__c.object
<CustomObject>
    <description>supdmdmatchlog__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supdmdmatchlog_clientid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>clientid</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supdmdmatchlog_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipName>divsupdmdmatchlogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supdmdmatchlog_item__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ITEM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supdmdmatchlog_log__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>LOG</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Supply/Demand Match Log</label>
    <nameField>
        <label>SUPDMDMATCHLOG Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supply/Demand Match Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>